ocp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dotnetcore-app
    app.kubernetes.io/part-of: dotnetcore-app-app
  name: dotnetcore-app
spec:
  ports:
  - name: 8080-tcp
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: dotnetcore-app
  sessionAffinity: None
  type: ClusterIP
